# Mission_Possible

./: README.md
DRIVERAPPCDOE/: globals.dart  main.dart
DRIVERAPPCDOE/models/: driver_user.dart  today_ride.dart
DRIVERAPPCDOE/pages/: home_page.dart  login_page.dart  otp_screen.dart  otp_sent.dart  otp_verified.dart  register_page1.dart  register_page2.dart  splash_page.dart
DRIVERAPPCDOE/providers/: authentication_provider.dart
DRIVERAPPCDOE/services/: cloud_storage_services.dart  database_service.dart  media_services.dart  mqtt_handler.dart  navigation_services.dart
DRIVERAPPCDOE/widgets/: driver_details.dart  register_page_link.dart  submit_button.dart
ESP32_CODE/: CMakeLists.txt  globals.c  gw_modem.c  main.c  mqtt_handler.c  rfid_handler.c  rtmp_app_setting.c  rtmp_handler.c  rtmp_push_app.c
ESP32_CODE/include/: board_pins.h  defines.h  globals.h  gw_config.h  gw_modem.h  mqtt_handler.h  rfid_handler.h  rtmp_handler.h  rtmp_push_app.h
MQTT_SERVER/: app.js  package.json
MQTT_SERVER/routes/: azurIot.js  esp_iot_hub_connector.c  firebase.js  fs.js  mqtt.js  rtsp.js
PARENTSAPPCODE/: globals.dart  main.dart
PARENTSAPPCODE/models/: child_user.dart  parent_user.dart
PARENTSAPPCODE/pages/: home_page.dart  login_page.dart  splash_page.dart
PARENTSAPPCODE/providers/: authentication_provider.dart  child_list_provider.dart
PARENTSAPPCODE/services/: database_service.dart
PARENTSAPPCODE/widgets/: input_text_form_field.dart  parent_details  rounded_image.dart  submit_button.dart
